--- a/continuar/style.css
+++ b/continuar/style.css
@@ -1,78 +1,74 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #E5E5E5;
 }
 /* Container geral */
 
-.container{
+.container {
     display: grid;
-    grid-template-areas: "header header header"
-                         "content content content"
-                         "footer footer footer";
+    grid-template-areas: "header header header" "content content content" "footer footer footer";
     width: 100vw;
     height: 100vh;
-} 
+}
 
 /* Header */
 
-.header{
+.header {
     grid-area: header;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     background-color: rgba(255, 255, 255, 1);
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     border-bottom: 1px solid rgba(254, 0, 120, 1);
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.header .menu a span{
+.header .menu a span {
     margin-right: 3rem;
     color: rgba(84, 84, 84, 1);
     font-family: 'Open Sans', sans-serif;
 }
 
-.header .menu a span:hover{
+.header .menu a span:hover {
     color: rgba(254, 0, 120, 1);
 }
 
-.header img{
+.header img {
     margin-left: 8.75rem;
 }
 
-.header .menu a:nth-child(3){
+.header .menu a:nth-child(3) {
     margin-right: 7rem;
 }
 
 /* Conteudo */
 
-.content{
+.content {
     display: grid;
     grid-area: content;
-    grid-template-areas: ". . . . ."
-                         ". content . sidebar ."
-                         ". content . . .";
+    grid-template-areas: ". . . . ." ". content . sidebar ." ". content . . .";
 }
 
-.conteinerconteudo{
+.conteinerconteudo {
     grid-area: content;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /*     justify-content: center;
+    align-items: center; */
     margin: 3.5rem 3rem 4rem 6.3rem;
     border-radius: 20px;
 }
 
-.conteudo1{
+.conteudo1 {
     background-color: rgba(255, 255, 255, 1);
     margin-bottom: 2.5rem;
     display: flex;
@@ -81,10 +77,11 @@ a{
     max-width: 45rem;
     border: 1px solid rgba(254, 0, 120, 1);
     border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.12);
+    flex-wrap: nowrap;
 }
 
-.conteudo1 h2{
+.conteudo1 h2 {
     color: rgba(0, 0, 0, 1);
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
@@ -92,7 +89,7 @@ a{
     font-size: 1.5rem;
 }
 
-.conteudo1 ul{
+.conteudo1 ul {
     margin: 0 0 0 3rem;
     text-align: left;
     color: rgba(0, 0, 0, 1);
@@ -101,11 +98,11 @@ a{
     font-size: 0.87rem;
 }
 
-.conteudo1 > ul{
+.conteudo1 > ul {
     margin-bottom: 1.81rem;
 }
 
-.conteudo1 p:nth-child(2){
+.conteudo1 p:nth-child(2) {
     color: rgba(146, 146, 146, 1);
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
@@ -113,27 +110,24 @@ a{
     margin: 0 0 0.8rem 1.5rem;
 }
 
-.conteudo1 img{
+.conteudo1 img {
     margin-bottom: 1.5rem;
 }
 
-.conteudo1 p{
+.conteudo1 p {
     text-align: left;
     color: rgba(84, 84, 84, 1);
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
-    margin: 0 1.5rem 1.5rem 1.5rem;
+    margin: 0 1.5rem 1.5rem;
 }
 
-.conteudo1 a{
+.conteudo1 a {
     align-self: flex-end;
     border: 1px solid rgba(254, 0, 120, 1);
     margin: 0 1.5rem 1.5rem 0;
     border-radius: 90px;
-    padding: 0.6rem 1.7rem 0.6rem  1.7rem;
-}
-
-.conteudo1 a{
+    padding: 0.6rem 1.7rem;
     text-decoration: none;
     font-weight: 400;
     font-size: 0.87rem;
@@ -141,33 +135,100 @@ a{
     font-family: 'Open Sans', sans-serif;
 }
 
-.conteudo1 a:hover{
+.conteudo1 a:hover {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(254, 0, 120, 1);
 }
 
+.formulario {
+    display: flex;
+    flex-direction: column;
+}
+
+.formulario label {
+    display: block;
+    font-weight: 400;
+    font-size: 0.87rem;
+    color: rgba(0, 0, 0, 1);
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 0.5rem;
+}
+
+.comentario h2 {
+    margin-bottom: 1.5rem;
+}
+
+.dados {
+    display: flex;
+}
+
+.formulario input {
+    outline: none;
+    border: none;
+}
+
+.dados input {
+    width: 22.12rem;
+    height: 1.5rem;
+}
+
+.formulario input:hover{
+    border: 1px solid rgba(254, 0, 120, 1);
+}
+
+.nome {
+    margin-right: 1.5rem;
+}
+
+.comentarios {
+    margin-top: 1.5rem;
+}
+
+.comentarios input {
+    width: 45.74rem;
+    height: 11rem;
+}
+
+.buttoncoment{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 3rem;
+}
+
+.buttoncoment button{
+    background-color: rgba(254, 0, 120, 1);
+    color: white;
+    height: 43px;
+width: 118px;
+left: 755px;
+top: 1735px;
+border-radius: 20px;
+padding: 12px, 24px, 12px, 24px;
+border: none;
+cursor: pointer;
+}
 /* Sidebar */
 
-.sidebar{
+.sidebar {
     grid-area: sidebar;
     margin: 3.5rem 8.75rem 0 0;
     background-color: rgba(255, 255, 255, 1);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.12);
     border: 1px solid rgba(254, 0, 120, 1);
     border-radius: 20px;
 }
 
-.flex{
+.flex {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.flexfilhos{
+.flexfilhos {
     display: flex;
     justify-content: space-between;
     border-bottom: 2px solid rgba(238, 238, 238, 1);
-    margin: 0 1.25rem 1rem 1.25rem;
+    margin: 0 1.25rem 1rem;
     border-style: none none dotted none;
     font-weight: 400;
     font-size: 0.87rem;
@@ -175,27 +236,26 @@ a{
     font-family: 'Open Sans', sans-serif;
 }
 
-
-form input{
+.sidebar form input {
     outline: none;
     font-weight: 400;
     font-size: 0.87rem;
     color: rgba(84, 84, 84, 1);
     font-family: 'Open Sans', sans-serif;
     border: 1px solid rgba(238, 238, 238, 1);
-    width: 20rem; 
+    width: 20rem;
     height: 3.25rem;
     border-radius: 15px;
-    margin: 1.25rem 1.25rem 0 1.25rem;
+    margin: 1.25rem 1.25rem 0;
     padding: 1rem 0 1rem 1.25rem;
 }
 
-form input:hover {
+.sidebar form input:hover {
     border: 1px solid rgba(254, 0, 120, 1);
     border-radius: 15px;
 }
 
-.sidebar h2{
+.sidebar h2 {
     margin: 2rem 0 2.5rem 1.25rem;
     border-left: 2px solid rgba(254, 0, 120, 1);
     padding-left: 0.68rem;
@@ -205,27 +265,27 @@ form input:hover {
     font-family: 'Open Sans', sans-serif;
 }
 
-.flexfilhos p{
+.flexfilhos p {
     margin-bottom: 1rem;
     padding-left: 0.68rem;
 }
 
-a .flexfilhos:hover{
+a .flexfilhos:hover {
     color: rgba(254, 0, 120, 1);
     border-bottom-color: rgba(254, 0, 120, 1);
 }
 
-.ad{
+.ad {
     display: flex;
     width: 21.25rem;
     height: 15rem;
     justify-content: center;
     align-items: center;
     background-color: rgba(238, 238, 238, 1);
-    margin: 0 1.25rem 2rem 1.25rem;
+    margin: 0 1.25rem 2rem;
 }
 
-.ad p{
+.ad p {
     font-weight: 400;
     font-size: 2.25rem;
     color: rgba(84, 84, 84, 1);
@@ -234,7 +294,7 @@ a .flexfilhos:hover{
 
 /* footer */
 
-.footer{
+.footer {
     grid-area: footer;
     display: flex;
     justify-content: center;
